[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenery/World.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="TenSecondTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 97, 104 )

[node name="World" parent="." instance=ExtResource( 4 )]

[connection signal="ten_second_mark" from="." to="Player" method="_on_Main_ten_second_mark"]
[connection signal="ten_second_mark" from="." to="World" method="_on_Main_ten_second_mark"]
[connection signal="timeout" from="TenSecondTimer" to="." method="_on_TenSecondTimer_timeout"]
